# MetaExtractor

./: .gitignore  MANUSCRIPT.md  README.md  pyproject.toml
benchmarks/cmd_sonnet5/: AGGREGATE.md  README.md  aggregate.json  aggregate.py  bench.py  cmd.clean.linkml.yaml  make_clean_schema.py  manifest.json  multiseed.py  rerun_q2.sh  retry_failed.py  select_studies.py
benchmarks/cmd_sonnet5/harmonize/: bodysite_corpus_v041.csv  build_bodysite_v041.py  build_disease_v041.py  crosswalk_body_site.csv  crosswalk_disease.csv  crosswalk_gold_body_site.csv  crosswalk_gold_disease.csv  crosswalk_gold_treatment.csv  crosswalk_treatment.csv  gold_terms_disease.json  gold_terms_treatment.json  map_terms.py  map_treatment_new.py  rescore.py  rescore_value_accuracy.csv  run_om.py  run_om_disease.py  run_sm.py  sm_input_uncurated.csv  sm_uncurated_mapping.csv
examples/: schema.json
src/metaextractor/: __init__.py  cli.py  column_mapper.py  evaluation.py  extractor.py  fetcher.py  output.py  prompts.py  schema.py  supplementary.py  table_plan.py  table_select.py  writers.py
src/metaextractor/adapters/: __init__.py  linkml.py
tests/: test_column_mapper.py  test_extractor_table_selection.py  test_fetcher.py  test_linkml_adapter.py  test_reconcile_dropped_columns.py  test_sample_enumeration.py  test_supplementary.py  test_table_plan.py  test_table_select.py
tools/: eval_one_paper.py
